--- a/FixItAll/project-2/views/partials/modals/loginAsModal.ejs
+++ b/FixItAll/project-2/views/partials/modals/loginAsModal.ejs
@@ -17,13 +17,13 @@ aria-labelledby="loginModalLabel" aria-hidden="true">
         <div class="d-flex justify-content-center gap-4 flex-wrap">
             <div class="text-center p-4">
                 <img src="/images/icons8-fix-100.png" alt="Customer" width="80">
-                <button class="btn btn-site mt-5 d-block mx-auto"
+                <button style="height: 65px;" class="btn btn-site mt-5 d-block mx-auto"
                     id="customerLoginBtn">Customer</button>
             </div>
             <div class="text-center p-4">
                 <img src="/images/icons8-construction-100.png" alt="Service Provider"
                     width="80">
-                <button class="btn btn-site mt-5 d-block mx-auto"
+                <button style="height: 65px;" class="btn btn-site mt-5 d-block mx-auto"
                     id="serviceProviderLoginBtn">Service
                     Provider</button>
             </div>
